<resources>
    <string name="app_name">QueueFree</string>
    <string name="notification_channel_start">notification_start_channel</string>
    <string name="notify">Oggi hai degli eventi prenotati</string>
    <string name="google_map_api_key">AIzaSyB27j5x0P2X-BUWP66q9ISeI8FC2GZa94I</string>
    <string name="loginText">LOGIN</string>
    <string name="login">Login</string>
    <string name="emailEditText">Email</string>
    <string name="passwordEditText">Password</string>
    <string name="confpasswordEditText">Conferma Password</string>
    <string name="notRegistred">Non sei registrato? </string>
    <string name="registred">REGISTRATI</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="insertdate">Inserisci la tua data di nascita</string>
    <string name="nameEmpty">Inserisci nome</string>
    <string name="surnameEmpty">Inserisci cognome</string>
    <string name="emailEmpty">Inserisci email</string>
    <string name="passEmpty">Inserisci password</string>
    <string name="confpassEmpty">Conferma la password</string>
    <string name="confpassDifferent">Non coincide!</string>
    <string name="sessoEmpty">Inserisci il sesso</string>
    <string name="dataEmpty">Errore! Inserisci data di nascita</string>
    <string name="userRegistrated">Utente creato correttamente!</string>
    <string name="immagine">Immagine</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="hai_un_azienda">Hai un azienda? </string>
    <string name="registralazienda">REGISTRALA</string>
    <string name="nome_dell_azienda">Nome dell\'azienda</string>
    <string name="dove_si_trova">Dove si trova?</string>
    <string-array name="category_array">
        <item>Seleziona una categoria</item>
        <item>Spiaggia</item>
        <item>Museo</item>
        <item>Biblioteca</item>
    </string-array>
    <string name="f_nameEmpty">Inserisci il nome</string>
    <string name="placesnameEmpty">Inserisci la posizione</string>
    <string name="categoryEmpty">Inserisci la categoria</string>
    <string name="profiloMenu">Profilo</string>
    <string name="impostazioniMenu">Impostazioni</string>
    <string name="logoutMenu">Logout</string>
    <string name="spiaggiaHomeView">Spiaggia</string>
    <string name="bibliotecaHomeView">Biblioteca</string>
    <string name="museoHomeView">Museo</string>
    <string name="editprofiletext">EditProfile</string>
    <string name="dataText">Data di nascita:</string>
    <string name="emailText">"Email: "</string>
    <string name="editProfileButton">Modifica</string>
    <string name="saveProfile">Salva</string>
    <string name="facebook_app_id">2006035369540453</string>
    <string name="fb_login_protocol_scheme">fb2006035369540453</string>
    <string name="Pwd_firm">Password</string>
    <string name="modifica_password">Modifica Password</string>
    <string name="canc_modifica">Annulla Modifiche</string>
    <string name="inserisci_password">Inserisci la password</string>
    <string name="conferma_identità">Conferma la tua identità prima di proseguire</string>
    <string name="cancelPassButton">Cancella</string>
    <string name="okPassButton">Conferma</string>
    <string name="update_della_password">Update della password</string>
    <string name="conferma_identita_password">Per cambiare la password devi confermare la tua identità</string>
    <string name="ask_old_password">Inserisci la vecchia password</string>
    <string name="ask_new_password">Inserisci nuova password</string>
    <string name="ask_again_pass">Inserisci nuovamente la password</string>
    <string name="confirm">Conferma</string>
    <string name="gallery">GALLERIA</string>
    <string name="takepic">SCATTA FOTO</string>
    <string name="menu_string">Menu</string>
    <string name="title_activity_about">About</string>
    <string name="clock">clock</string>
    <string name="openFirm">Orario di apertura:</string>
    <string name="closeFirm">Orario di chiusura:</string>
    <string name="persone">Persone</string>
    <string name="clienti_contemp">Clienti contemporaneamente:</string>
    <string name="capienza_massima">Capienza massima:</string>
    <string name="posizioneText">Posizione:</string>
    <string name="firmimage">firmImage</string>
    <string name="startH">Orario d\'inizio:</string>
    <string name="peoples"># partecipanti:</string>
    <string name="durata_prenotazione">Durata prenotazione:</string>
    <string name="book">Prenota</string>
    <string name="annulla">Annulla</string>
    <string name="durata_turno">Durata di un turno:</string>
    <string name="prenotazioni">Prenotazioni</string>
    <string name="orario_apertura_text">Seleziona orario apertura</string>
    <string name="orario_di_chiusura_text">Seleziona orario di chiusura</string>
    <string name="capienza_massima_reg">Capienza massima</string>
    <string name="about">La versione dell\'app QueueFree permette di poter prenotare un posto a scelta
                        tra tre differenti categorie: Spiagge, Biblioteche, Musei.\n
                        Sperando che questo servizio semplifichi la gestione dei flussi di persone all\'interno
                        delle attività.\n
                        Vi auguriamo una buona esperienza. ALE Development Team
    </string>
    <string name="quando">Quando:</string>
    <string name="data">Data</string>
    <string name="search">Cerca</string>
    <string name="isdisponible">isDisponible</string>
    <string name="seleziona_un_giorno">Seleziona un giorno</string>
    <string name="imageperson">ImagePerson</string>
    <string name="nPeople">Numero partecipanti:</string>
    <string name="days_">Giorni:</string>
    <string name="days">days</string>
    <string name="turni_giorno">Numero di turni al giorno</string>
    <string name="descrizione">Descrizione:</string>
    <string name="visualizza">Visualizza</string>
    <string name="registra_azienda">REGISTRA AZIENDA</string>
    <string name="conferma">conferma</string>
    <string name="giorni_di_apertura">Giorni:</string>
    <string name="persone_prenotate">\t\t\t\tPersone prenotate:</string>
    <string name="menu_elimina">ELIMINA ACCOUNT</string>
    <string name="modifica_profilo">Modifica Profilo</string>
    <string name="remove_firm">La rimozione dell\'account è irreversibile e cancellerà le prenotazioni effettuate dagli utenti.
        \nProseguire con la rimozione dell\'azienda da QueueFree?</string>
    <string name="remove_user">La rimozione dell\'account è irreversibile e cancellerà le prenotazioni effettuate dall\'utente.
        \nProseguire con la rimozione dell\'utente da QueueFree?</string>
    <string name="indietro">Indietro</string>
    <string name="elimina">Elimina</string>
    <string name="attenzione">ATTENZIONE</string>
    <string name="sei_sicuro_di_voler_procedere">Sei sicuro di voler procedere?</string>
    <string name="descrizione_dialog">Descrizione</string>
    <string name="giorni">Giorni:</string>
    <string name="noDays">Nessun giorno lavorativo selezionato</string>
    <string name="futureDay">Hai inserito una data nel futuro</string>
    <string name="twelveDay">Hai meno di 12 anni</string>

</resources>
