<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_della_password"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/conferma_identita_password"
        android:gravity="center"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/ask_old_password"
        android:theme="@style/EditTextBlack" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/ask_new_password"
        android:theme="@style/EditTextBlack" />

    <EditText
        android:id="@+id/confirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/ask_again_pass"
        android:theme="@style/EditTextBlack" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:text="@string/cancelPassButton"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/btn_edit" />

        <Button
            android:id="@+id/okNewPassButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:text="@string/okPassButton"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/btn_confirm" />

    </RelativeLayout>

</LinearLayout>