<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inserisci_password"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/conferma_identità"
        android:gravity="center"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/emailRemoveEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:hint="@string/emailEditText" />

    <EditText
        android:id="@+id/passwordRemoveEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/passwordEditText" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/cancPassRemoveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:text="@string/cancelPassButton"
            android:background="@drawable/btn_edit"
            android:textColor="@color/white"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/okRemoveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:text="@string/okPassButton"
            android:background="@drawable/btn_confirm"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
    </RelativeLayout>

</LinearLayout>