<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundRed"
    app:passwordToggleEnabled="true" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/queue_free_logo"
        android:contentDescription="@string/immagine" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/coming_soon"
        android:gravity="center"
        android:text="@string/loginText"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailLoginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="textWebEmailAddress"
        android:hint="@string/emailEditText"
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passLoginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLoginEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/passwordEditText"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:autofillHints="" />

    <TextView
        android:id="@+id/notRegistredText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passLoginEditText"
        android:layout_alignStart="@+id/passLoginEditText"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:text="@string/notRegistred"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passLoginEditText"
        android:layout_toEndOf="@+id/notRegistredText"
        android:layout_alignBaseline="@+id/notRegistredText"
        android:text="@string/registred"
        android:textColor="@color/spiaggia"
        android:layout_marginStart="3dp"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/notRegistredFirmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notRegistredText"
        android:layout_alignStart="@+id/passLoginEditText"
        android:textSize="17sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:text="@string/hai_un_azienda"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/signUpFirmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notRegistredText"
        android:layout_toEndOf="@+id/notRegistredFirmText"
        android:layout_alignBaseline="@+id/notRegistredFirmText"
        android:text="@string/registralazienda"
        android:textColor="@color/spiaggia"
        android:layout_marginStart="3dp"
        android:textSize="17sp"/>

    <Button
        android:id="@+id/loginButtonlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notRegistredFirmText"
        android:layout_alignStart="@+id/passLoginEditText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/login"
        android:textColor="@color/backgroundRed"
        android:textSize="20sp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/buttonFacebookLogin"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_below="@+id/loginButtonlogin"
        android:layout_alignStart="@+id/passLoginEditText"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:text="@string/facebook" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButtonlogin"
        android:layout_alignBaseline="@+id/buttonFacebookLogin"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_toEndOf="@+id/buttonFacebookLogin"
        android:text="@string/google" />

</RelativeLayout>