<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundRed">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/coming_soon"
        android:gravity="center"
        android:text="@string/registred"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameRegisterEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textWebEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"/>


    <EditText
        android:id="@+id/surnameRegisterEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameRegisterEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textWebEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/emailRegisterEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surnameRegisterEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/emailEditText"
        android:inputType="textWebEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/passRegisterEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailRegisterEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/passwordEditText"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/confpassRegisterEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passRegisterEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/confpasswordEditText"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/register_show_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confpassRegisterEditText"
        android:textColor="@color/backgroundRed"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/insertdate"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"/>

    <TextView
        android:id="@+id/firmRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_show_calendar"
        android:layout_alignStart="@+id/register_show_calendar"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/hai_un_azienda"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/firmRegisterClickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_show_calendar"
        android:layout_toEndOf="@id/firmRegister"
        android:layout_marginTop="10dp"
        android:text="@string/registralazienda"
        android:textColor="@color/simileGolf"
        android:textSize="17sp"
        />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_show_calendar"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/registred"
        android:textColor="@color/backgroundRed"
        android:textSize="20sp" />
</RelativeLayout>