<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center">

    <Button
        android:id="@+id/spiaggiaButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/btn_spiagga"
        android:padding="20dp"
        android:text="@string/spiaggiaHomeView"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/biblioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_biblioteche"
        android:padding="20dp"
        android:text="@string/bibliotecaHomeView"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/museiButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/btn_musei"
        android:padding="20dp"
        android:text="@string/museoHomeView"
        android:textColor="@color/white"
        android:textSize="30sp" />

</LinearLayout>