<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/descTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/descrizione_dialog"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/red"
            android:gravity="center"/>

        <TextView
            android:id="@+id/descrTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descTitle"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/descrEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descTitle"
            android:layout_marginTop="5dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="invisible"
            android:theme="@style/EditTextBlack" />

        <Button
            android:id="@+id/cancDescr"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descrEditText"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/cancelPassButton"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/btn_edit"/>

        <Button
            android:id="@+id/editDescr"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descrEditText"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/editProfileButton"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_edit" />
    </RelativeLayout>

</ScrollView>